<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androidfinal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registro">Registro</string>

    <!-- LOGIN -->
    <string name="login_name">Correo</string>
    <string name="login_password">Password</string>
    <string name="inicio_session">Login</string>

    <!-- REGISTER -->
    <string name="name_registro">Username</string>
    <string name="password_registro">Password</string>
    <string name="password_confirmation_registro"> Confirmar Password</string>
    <string name="email_registro">Email</string>
    <string name="register_button_registro">Registrarse</string>
    <string name="conocimiento">Conocimientos en Android</string>
    <string name="condiciones1">Al aceptar las condiciones usted esta sujeto a recibir mails, promociones, mensajes de otros usuarios</string>
    <string name="condiciones">Acepto las condiciones de Uso</string>
    <string name="acepto">Si</string>

    <!-- APPLICATION -->
    <string name="agregar">Settings</string>
    <string name="perfil">Add Friend</string>
    <string name="settings">Profile</string>
    <string name="logout">Logout</string>
    <string name="info">Info</string>
    <string name="contact_us">Consultas</string>
    <string name="listaamigos">Lista de Amigos</string>
    <string name="title_activity_aplicacion">Aplicacion</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_persona">Persona</string>

    <!-- PERSONA -->
    <string name="agregar_amigo">Add Friend</string>
    <string name="borrar_amigo">Delete</string>
    <string name="chat_amigo">Iniciar Chat</string>
    <string name="persona_name">Nombre</string>
    <string name="persona_apellido">Apellido</string>
    <string name="persona_email">Email</string>
    <string name="informacion_app">Esta aplicacion es una version Beta, de la aplicacion que se esta creando
    la idea es que todos apoyen la aplicacion, y manden sus comentarios, o sus consultas al correo. vuelva a la pagina principal y mande sus consultas 
    //This application is a Beta version of the application that is being created
    the idea is that everyone will support the application, and send your comments, or email inquiries to. Return to the main page and send your queries</string>
    <string name="volver_atras">Volver</string>
    <string name="informacion_titulo">Informacion : </string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_informacion">Informacion</string>

    <!-- SETTINGS -->

    <string name="nombre_settings">Nombre y Apellido</string>
    <string name="texto_consulta">Consultas : Rellenar Formulario</string>
    <string name="consulta_texto">Consulta</string>
    <string name="opciontext1">Estudiante</string>
    <string name="opciontext2">Universitario</string>
    <string name="opciontext3">Trabajador</string>
    <string name="submit0">Confirmar</string>
    <string name="submit1">Terminar</string>
    <string name="title_activity_settings2">Settings2</string>

</resources>
