<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="?android:attr/buttonBarButtonStyle"
    tools:context=".Persona" >


    
     <EditText
        android:id="@+id/firstNamePerson"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/persona_name" />
    
	<EditText
	      android:id="@+id/lastNamePerson"
	      android:inputType="text"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:ems="10"
	      android:hint="@string/persona_apellido" />
      
	<EditText
	      android:id="@+id/emailPerson"
	      android:inputType="textEmailAddress"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:ems="10"
	      android:hint="@string/persona_email" />

	<Button
	    android:id="@+id/saveButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="17dp"
	    android:onClick="agregaramigo"
	    android:text="@string/agregar_amigo" />
	 
	 <Button
	        android:id="@+id/deleteButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:text="@string/borrar_amigo"
	        android:visibility="invisible"
	        android:onClick="borraramigo" />
	 
	 <Button
	    android:id="@+id/chatButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="17dp"
	    android:onClick="chatamigo"
	    android:visibility="invisible"
	    android:text="@string/chat_amigo" />
    

</LinearLayout>
