<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Login" >

    <EditText
        android:id="@+id/correoLogin"
         android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/login_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passLogin"
         android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/login_password"
        android:inputType="textPassword" >
           <requestFocus />
         </EditText>   
         
    <Button
            android:id="@+id/iniciarLogin"
            style="@style/AppTheme"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="LoginButton"
            android:text="@string/inicio_session" />
   
  

</LinearLayout>
